[build-system]
requires = [
    "setuptools>=68.0",
    "setuptools-scm[toml]>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "deepnsd_code"
description = ""
requires-python = ">=3.10"
authors = [
    {name=""},
]
version = "0.1"

[tool.setuptools.packages.find]
where = ["neural_data"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = {file = "requirements.txt"}

